<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">CurrentWidget</string>
<string name="save_button">Save</string>
<string name="refresh_text">Refresh widget every</string>
<string-array name="units_array"><item>seconds</item>
<item>minutes</item>
</string-array>
<string name="units_prompt">units</string>
<string name="update_now_button">Update Now</string>
<string name="log_checkbox">Write to log file</string>
<string name="log_filename">/sdcard/currentwidget.log</string>
<string name="log_apps_checkbox">Log running applications</string>
<string name="pref_general_category">General</string>
<string name="pref_log_category">Log File</string>
<string name="op_text">Operation on value</string>
<string name="op_prompt">operation</string>
<string-array name="op_array">
<item>none</item>
<item>*</item>
<item>/</item>
<item>+</item>
<item>-</item>
</string-array>
<string-array name="pref_op_types"><item>*</item>
<item>/</item>
<item>+</item>
<item>-</item>
</string-array>
<string-array name="pref_op_types_values"><item>1</item>
<item>2</item>
<item>3</item>
<item>4</item>
</string-array>
<string name="pref_interval_key">interval</string>
<string name="pref_log_enabled_key">log_enabled</string>
<string name="pref_log_filename_key">log_filename</string>
<string name="pref_log_apps_key">log_apps</string>
<string name="pref_op_enabled_key">op_enabled</string>
<string name="pref_op_type_key">op_type</string>
<string name="pref_op_value_key">op_value</string>
<string name="pref_hide_background_key">hide_background</string>
</resources>
