<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView01"
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

	
		<TextView android:text="@string/refresh_text" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5sp"/>
	  
		<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:orientation="horizontal">
			
			
			<EditText android:text="1" android:id="@+id/interval_edit" android:hint="interval" android:inputType="number" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
			<Spinner android:id="@+id/units_spinner" android:prompt="@string/units_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content"></Spinner>
		
		</LinearLayout>
		
		<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:orientation="horizontal">	  
		
	      <TextView android:text="@string/op_text" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5sp"/>  
		  <Spinner android:id="@+id/op_spinner" android:prompt="@string/op_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content"></Spinner>
		  <EditText android:text="1" android:id="@+id/op_value_edit" android:hint="" 
		  android:inputType="numberDecimal" 
		  android:layout_width="60dp" android:layout_height="wrap_content" android:singleLine="true"/>
		  
	    </LinearLayout>
		
	
		<CheckBox android:text="@string/log_checkbox" android:id="@+id/log_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>	
	
		<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:orientation="horizontal">
			
			<EditText android:text="@string/log_filename" android:id="@+id/log_filename" 
			android:layout_width="200dp" android:layout_height="wrap_content"
			android:singleLine="true"/>
			
			<Button android:text="View" android:id="@+id/view_log_button"
				android:layout_width="wrap_content" android:layout_height="wrap_content"/>
			
		</LinearLayout>
	
		<CheckBox android:text="@string/log_apps_checkbox" android:id="@+id/log_apps_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
		
	
		<Button android:text="@string/save_button" android:id="@+id/save_button" android:layout_marginTop="10sp" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>	
	
</LinearLayout>

</ScrollView>

